--- a/My project/Assembly-CSharp.csproj
+++ b/My project/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\SpinningPuzzlePiece.cs" />
     <Compile Include="Assets\Scripts\SecretLeverScript.cs" />
+    <Compile Include="Assets\Scripts\playerAnimation.cs" />
     <Compile Include="Assets\Scripts\TreasureVault.cs" />
     <Compile Include="Assets\Scripts\ThirdPersonCamera.cs" />
     <Compile Include="Assets\Scripts\ThirdPuzzle.cs" />
